[project]
name = "grvt-pysdk"
version = "0.2.1"

description = "GRVT Python SDK"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "GRVT", email = "contact@grvt.io" },
]
readme = { file = "README_PYPI.md", content-type = "text/markdown" }
dependencies = [
    "aiohttp>=3.10.11",
    "backports-weakref>=1.0.post1",
    "dacite>=1.8.1",
    "dataclasses-json>=0.6.7",
    "eth-account>=0.13.4",
    "inflection>=0.5.1",
    "requests>=2.32.3",
    "websockets==13.1",
]

[project.urls]
homepage = "https://github.com/gravity-technologies/grvt-pysdk"
repository = "https://github.com/gravity-technologies/grvt-pysdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pysdk"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "bandit>=1.7.9",
    "docformatter>=1.7.5",
    "ruff>=0.6.2",
    "twine>=5.1.1",
]

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = [
    "__pycache__",
    "build",
    "dist",
]
target-version = "py312"
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
    "C4",
    "D200",
    "D201",
    "D204",
    "D205",
    "D206",
    "D210",
    "D211",
    "D213",
    "D300",
    "D400",
    "D402",
    "D403",
    "D404",
    "D419",
    "E",
    "F",
    "G010",
    "I001",
    "INP001",
    "N805",
    "PERF101",
    "PERF102",
    "PERF401",
    "PERF402",
    "PGH004",
    "PGH005",
    "PIE794",
    "PIE796",
    "PIE807",
    "PIE810",
    "RET502",
    "RET503",
    "RET504",
    "RET505",
    "RUF015",
    "RUF100",
    "S101",
    "T20",
    "UP",
    "W",
]

[tool.mypy]
files = ["src", "tests"]
strict = "true"
